# ssh-files

./: BENCHMARKS.md  BUILD.md  Cargo.toml  NOTICE  README.md  SECURITY.md  build-portable-linux.sh  build-portable-macos.sh  build-portable.bat  build.bat  deny.toml  install.ps1  install.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  supply-chain.yml
live-tests/: .gitignore  RUNBOOK.md  docker-compose.yml  manual.sh  mkfixtures.sh  setup.sh  verify.sh
live-tests/demo/: flat.tape  record.sh  tree.tape
live-tests/scenarios/: lib.sh  run_all_wave1.sh  s00_tofu_and_reconnect.sh  s01_key_mismatch_refused.sh  s02_encrypted_key_passphrase.sh  s03_password_retry_ladder.sh  s04_password_exhaustion_fails.sh  s05_ssh_config_alias.sh  s06_config_proxyjump.sh  s07_dash_j_overrides_config.sh  s08_multihop_jump.sh  s09_kbdint_auth.sh  s10_config_include.sh  s11_revoked_key_refused.sh  w25_roundtrip.sh
live-tests/sshd/: Dockerfile  entrypoint.sh
live-tests/sshd/configs/: kbdint.conf  plain.conf  pwonly.conf  sftponly.conf
src/: action.rs  app.rs  bench.rs  cli.rs  config.rs  file_tree.rs  input.rs  keymap.rs  main.rs  theme.rs  transfer.rs
src/clipboard/: fallback.rs  mod.rs  types.rs  windows.rs
src/executor/: local_local.rs  local_remote.rs  mod.rs  remote_local.rs  remote_remote.rs
src/source/: local.rs  mapping.rs  mod.rs  remote.rs
src/ssh/: exec.rs  mod.rs  revoked.rs  sftp.rs
src/ui/: geometry.rs  icons.rs  mod.rs  tree.rs
