[package]
name = "ssh-files"
version = "0.2.0"
edition = "2021"
description = "TUI SSH/SFTP file manager with dual-pane interface"
repository = "https://github.com/kondyukov/ssh-files"
keywords = ["ssh", "sftp", "tui", "file-manager"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
authors = ["Grigoriy Kondyukov"]

[features]
default = ["clipboard"]
clipboard = ["arboard"]
portable = []  # Static linking flags handled by RUSTFLAGS

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7"

# SSH/SFTP (pure Rust, no OpenSSL dependency)
russh = "0.46"
russh-sftp = "2.0"
russh-keys = "0.46"
# ~/.ssh/config parsing (standalone: no dependency on russh itself)
russh-config = "0.58"

# Utilities
anyhow = "1"
async-trait = "0.1"
directories = "5"
chrono = "0.4"
humansize = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Clipboard - optional for headless/minimal builds
arboard = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Ole",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
