[package]
name = "ssh-files"
version = "0.2.0"
edition = "2021"
rust-version = "1.97"
description = "TUI SSH/SFTP file manager with dual-pane interface"
repository = "https://github.com/kondyukov/ssh-files"
keywords = ["ssh", "sftp", "tui", "file-manager"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
authors = ["Grigoriy Kondyukov"]

[features]
default = ["clipboard"]
clipboard = ["arboard"]
portable = []  # Static linking flags handled by RUSTFLAGS

[dependencies]
# TUI. ratatui and crossterm move together: each ratatui release pins
# the crossterm major whose event types cross our code's boundary.
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7"

# SSH/SFTP, no OpenSSL dependency (russh-keys is merged into russh::keys
# since 0.49). Modern russh requires a ring or aws-lc-rs crypto backend;
# ring is chosen for its far better cross-compilation story (aws-lc-rs
# needs cmake/NASM on some of our six release targets).
russh = { version = "0.62", default-features = false, features = ["flate2", "rsa", "ring"] }
russh-sftp = "2.3"
# ~/.ssh/config parsing (standalone: no dependency on russh itself)
russh-config = "0.58"

# Utilities
anyhow = "1"
async-trait = "0.1"
directories = "6"
chrono = "0.4"
humansize = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
# ssh_config Include patterns
glob = "0.3"
# @revoked known_hosts markers: hashed-entry matching (HMAC-SHA1, the
# HashKnownHosts format) and its base64. All three already sit in the
# tree transitively via russh; versions track its.
hmac = "0.13"
sha1 = "0.11"
data-encoding = "2"

# Clipboard - optional for headless/minimal builds
arboard = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Ole",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
